@@ -128,3 +128,13 @@ return (1, 2, 3, 4)
      : nat
 *(1.2)
      : nat
+[{0; 0}]
+     : list (list nat)
+[{1; 2; 3};
+ {4; 5; 6};
+ {7; 8; 9}]
+     : list (list nat)
+amatch = mmatch 0 (with 0 => 1| 1 => 2 end)
+     : unit
+alist = [0; 1; 2]
+     : list nat
